<<<<<<< HEAD
[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Actors/Sword.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Art/player/player_idle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "falling"

[sub_resource type="Animation" id=2]
resource_name = "falling_weapon"

[sub_resource type="Animation" id=3]
resource_name = "horizontal_attack"

[sub_resource type="Animation" id=4]
resource_name = "idle"

[sub_resource type="Animation" id=5]
resource_name = "idle_weapon"

[sub_resource type="Animation" id=6]
resource_name = "jumping"

[sub_resource type="Animation" id=7]
resource_name = "jumping_weapon"

[sub_resource type="Animation" id=8]
resource_name = "vertical_attack"

[sub_resource type="AudioStreamSample" id=9]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24.4647, 19.2524 )
=======
[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/player/ninja.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Art/sound/Item_84.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "rest"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "slash"
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimatedSprite/Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.2269, 18.6932 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 20.1926, 11.7872 )
>>>>>>> master

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )
speed = Vector2( 250, 1000 )

<<<<<<< HEAD
[node name="SlashAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falling = SubResource( 1 )
anims/falling_weapon = SubResource( 2 )
anims/horizontal_attack = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/vertical_attack = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sword" type="Position2D" parent="Sprite"]
script = ExtResource( 1 )

[node name="Slash" type="AudioStreamPlayer2D" parent="Sprite/Sword"]
stream = SubResource( 9 )

[node name="Cooldown" type="Timer" parent="Sprite/Sword"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.53656 )
shape = SubResource( 10 )
=======
[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/damage = SubResource( 1 )
anims/flash = SubResource( 2 )
anims/rest = SubResource( 3 )

[node name="AttackPlayer" type="AnimationPlayer" parent="Body"]
anims/slash = SubResource( 11 )

[node name="SlashAnimation" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.81395 )
shape = SubResource( 4 )
>>>>>>> master

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -35 )
current = true
zoom = Vector2( 0.8, 0.8 )
<<<<<<< HEAD
limit_left = -10
limit_top = -100
limit_right = 203
limit_bottom = 100
=======

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -7.67917 )
frames = SubResource( 10 )
animation = "idle"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
position = Vector2( -1, 7.67917 )
collision_layer = 16

[node name="AttackHitbox" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( 34.951, -1.80836 )
shape = SubResource( 12 )
disabled = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="SlashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
>>>>>>> master
